base/aware/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aware
    tier: api
  name: aware-api
  namespace: aware
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aware
      tier: api
  template:
    metadata:
      labels:
        app: aware
        tier: api
    spec:
      containers:
      - name: aware-api
        image: sdpequinor/aware-api:4.0.1
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 3000
          capabilities:
            drop:
            - all
        ports:
        - containerPort: 5000
          name: http
        resources:
          requests:
            cpu: 100m
            memory: "100Mi"
          limits:
            cpu: 200m
            memory: "200Mi"
