base/aware/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aware
    tier: web
  name: aware-web
  namespace: aware
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aware
      tier: web
  template:
    metadata:
      labels:
        app: aware
        tier: web
    spec:
      containers:
      - name: aware-web
        image: sdpequinor/aware-web:4.0.0
        ports:
        - containerPort: 5000
          name: http
        resources:
          requests:
            cpu: 100m
            memory: "100Mi"
          limits:
            cpu: 500m
            memory: "1Gi"
