base/aware/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aware
  namespace: aware
  labels:
    app: aware
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - aware.sdpaks.equinor.com
      secretName: aware-tls
  rules:
    - host: aware.sdpaks.equinor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aware-web
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: aware-api
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aware-auth
  namespace: aware
  labels:
    app: aware
spec:
  tls:
  - hosts:
    - aware.sdpaks.equinor.com
    secretName: aware-tls
  rules:
    - host: aware.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2 
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-sdp
                port:
                  number: 4180
